--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,16 @@
     
     <%# boostrap_user %>
     <% if current_user %>
-      <script>
+      <script type="text/javascript">
         window.currentUser = {
           "id": <%= current_user.id %>,
           "username": "<%= current_user.username %>",
           "email": "<%= current_user.email %>"
         };
+
+        window.logo_primary = "<%= image_url('logo_primary.png') %>";
+        window.logo_wide = "<%= image_url('logo_wide.png') %>";
+        window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
       </script>
     <% end %>
   </head>
