--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,19 @@
           "email": "<%= current_user.email %>"
         };
 
+        window.airplane_icon = "<%= image_url('airplane_icon.ico') %>";
+        window.airplane_img = "<%= image_url('airplane.png') %>";
+        window.feature1 = "<%= image_url('feature1.jpg') %>";
+        window.feature2 = "<%= image_url('feature2.jpg') %>";
+        window.feature3 = "<%= image_url('feature3.jpg') %>";
+        window.feature4 = "<%= image_url('feature4.jpg') %>";
+        window.heart_icon = "<%= image_url('heat_icon.png') %>";
+        window.house_icon = "<%= image_url('house_icon.png') %>";
+        window.house_img = "<%= image_url('house.png') %>";
         window.logo_primary = "<%= image_url('logo_primary.png') %>";
         window.logo_wide = "<%= image_url('logo_wide.png') %>";
         window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
+        window.welcome_robot = "<%= image_url('welcome_robot.png') %>";
       </script>
     <% end %>
   </head>
