--- a/app/assets/stylesheets/components/signup_form.scss
+++ b/app/assets/stylesheets/components/signup_form.scss
@@ -6,7 +6,7 @@
   margin-top: 80px;
 }
 
-.signup-left {
+.signup-body-left {
   // border: 1px solid blue;
   width: 470px;
   display: flex;
@@ -16,13 +16,13 @@
   align-items: flex-start;
 }
 
-.signup-section-logo {
+.signup-body-left-logo {
   margin-right: 3px;
   padding-top: 10px;
   width: 230px;
 }
 
-.signup-right {
+.signup-body-right {
   // border: 1px solid red;
   width: 470px;
   // height: 600px;
@@ -33,7 +33,7 @@
   margin-left: 3px;
 }
 
-.signup-welcome {
+.signup-body-right-header {
   text-transform: uppercase;
   font-family: Lato;
   font-size: 16px;
@@ -64,7 +64,7 @@
   background-color: #f84808;
  }
 
- .show-input {
+ .visible-input {
   margin-top: 8px;
   margin-bottom: 17px;
   border-color: 0.5px solid lightgrey ;
@@ -75,7 +75,7 @@
   font-family: Lato;
   font-size: 18px;
 }
-.dont-show-input, .dont-show-error {
+.invisible-input, .invisible-error {
   visibility: hidden;
 }
 
@@ -96,17 +96,12 @@
   font-size: 24px;
 }
 
-span.show-input {
+span.visible-input {
   color: #333333;
   font-size: 18px;
   font-family: Lato;
 }
-// #font-bold.show-input {
-//   color: #333333;
-//   font-size: 18px;
-//   font-family: Lato;
-//   font-weight: 600;
-// }
+
 #font-bold {
   // color: #333333;
   // font-size: 18px;
@@ -114,7 +109,7 @@ span.show-input {
   font-weight: 600;
 }
 
-.show-error {
+.visible-error {
   margin-top: 12px;
   background:#cc4455;
   color: #ffffff;
