--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    
+    <%= favicon_link_tag asset_path('logo_signup.svg')%>
+
     <%# boostrap_user %>
     <% if current_user %>
       <script type="text/javascript">
@@ -16,22 +17,27 @@
           "username": "<%= current_user.username %>",
           "email": "<%= current_user.email %>"
         };
-
-        window.airplane_icon = "<%= image_url('airplane_icon.ico') %>";
-        window.airplane_img = "<%= image_url('airplane.png') %>";
-        window.feature1 = "<%= image_url('feature1.jpg') %>";
-        window.feature2 = "<%= image_url('feature2.jpg') %>";
-        window.feature3 = "<%= image_url('feature3.jpg') %>";
-        window.feature4 = "<%= image_url('feature4.jpg') %>";
-        window.heart_icon = "<%= image_url('heat_icon.png') %>";
-        window.house_icon = "<%= image_url('house_icon.png') %>";
-        window.house_img = "<%= image_url('house.png') %>";
-        window.logo_primary = "<%= image_url('logo_primary.png') %>";
-        window.logo_wide = "<%= image_url('logo_wide.png') %>";
-        window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
-        window.welcome_robot = "<%= image_url('welcome_robot.png') %>";
       </script>
     <% end %>
+
+    <script type="text/javascript">
+      // rake assets:precompile  to generate assets
+      window.airplane_icon = "<%= image_url('airplane_icon.ico') %>";
+      window.airplane_img = "<%= image_url('airplane.png') %>";
+      window.background_img = "<%= image_url('background_img.png') %>";
+      window.feature1 = "<%= image_url('feature1.jpg') %>";
+      window.feature2 = "<%= image_url('feature2.jpg') %>";
+      window.feature3 = "<%= image_url('feature3.jpg') %>";
+      window.feature4 = "<%= image_url('feature4.jpg') %>";
+      window.heart_icon = "<%= image_url('heart_icon.png') %>";
+      window.house_icon = "<%= image_url('house_icon.png') %>";
+      window.house_img = "<%= image_url('house.png') %>";
+      window.logo_primary = "<%= image_url('logo_primary.png') %>";
+      window.logo_signup = "<%= image_url('logo_signup.svg') %>";
+      window.logo_wide = "<%= image_url('logo_wide.png') %>";
+      window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
+      window.welcome_robot = "<%= image_url('welcome_robot.png') %>";
+    </script>
   </head>
 
   <body>
