splashpage styling + rendering

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,11 +1,11 @@
 @import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
 
 // navbar
+
 .session-nav-elements {
   display: flex;
   flex-direction: row;
 }
-
 
 
 .session-nav-logo {
@@ -48,9 +48,9 @@
   margin-top: 10px;
   width: 95px;
 }
-// ----------------------------------------------------------
-// body
 
+//------------------------------------------------------------
+// body
 .session-section {
   margin: auto;
   display: flex;
