--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
       // rake assets:precompile  to generate assets
       window.airplane_icon = "<%= image_url('airplane_icon.ico') %>";
       window.airplane_img = "<%= image_url('airplane.png') %>";
+      window.airplane_img2 = "<%= image_url('airplane_img2.png') %>";
       window.background_img = "<%= image_url('background_img.png') %>";
       window.feature1 = "<%= image_url('feature1.jpg') %>";
       window.feature2 = "<%= image_url('feature2.jpg') %>";
@@ -36,6 +37,7 @@
       window.logo_signup = "<%= image_url('logo_signup.svg') %>";
       window.logo_wide = "<%= image_url('logo_wide.png') %>";
       window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
+      window.star_icon = "<%= image_url('star_icon.png') %>";
       window.welcome_robot = "<%= image_url('welcome_robot.png') %>";
     </script>
   </head>
