--- a/app/assets/stylesheets/components/splash_page.scss
+++ b/app/assets/stylesheets/components/splash_page.scss
@@ -73,7 +73,7 @@
 
 
 .splash-paragraph-black{
-  color:black;
+  color: rgba(7, 7, 7, 0.777);
   font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 7px;
@@ -106,6 +106,13 @@
   margin-bottom: 16px;
 }
 
+.splash-paragraph-lighter {
+  font-size: 14px;
+  font-weight: lighter;
+  margin-top: 15px;
+  margin-bottom: -25px;
+}
+
 .splash-airplane-img {
   width: 450px;
   margin: 10px;
@@ -126,4 +133,134 @@
 @keyframes fadein {
     from { opacity: 0.2; }
     to { opacity: 0.8; }
+}
+
+// .splash-actions{
+//   display: grid;
+//   grid-template-columns: repeat(2, 1fr);
+// }
+
+// .splash-action {
+//   grid-column: 1/4;
+//   grid-row: 1/2; 
+//   width: 100px;
+// }
+
+// .splash-action {
+//   grid-column: 1/4;
+//   grid-row: 1/2; 
+//   width: 100px;
+// }
+
+// .splash-action {
+//   grid-column: 1/4;
+//   grid-row: 1/2;
+//   width: 100px;
+// }
+
+// .splash-action {
+//   grid-column: 1/4;
+//   grid-row: 1/2; 
+//   width: 100px;
+// }
+.splash-actions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.splash-actions-row1{
+  display: flex;
+  flex-direction: row;
+}
+
+.splash-actions-row2{
+  display: flex;
+  flex-direction: row;
+}
+
+.splash-actions img{
+  max-width: 2000px;
+}
+
+.action1_container, .action1_container{
+  background: url(black_tiles.png);
+}
+
+.action2_container{
+  background: url(green_tiles.png);
+}
+
+.action3_container{
+  background: url(red_tiles.png);
+}
+
+
+.feature-title{
+  color: rgba(7, 7, 7, 0.777);
+  font-size: 37px;
+  font-weight: bolder;
+  text-align: center;
+  margin-top: 70px;
+}
+
+.splash-features{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.splash-features ul {
+  line-height: 2.2;
+}
+
+.features-col2 ul {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.splash-eatures img {
+  width: 22px;
+  height: 22px;
+}
+
+.features-col1, .features-col2, .features-col3 {
+  color: rgba(7, 7, 7, 0.777);
+  font-size: 20px;
+  margin: 40px;
+}
+
+
+.feature-classes{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 20px;
+  color: rgba(7, 7, 7, 0.777);
+}
+
+.feature-classes > * {
+  margin: 5px;
+}
+
+.feature-classes img {
+  width: 22px;
+  height: 22px;
+}
+
+
+.splash-reviews{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+.splash-reviews div {
+  margin: 10px;
+  font-size: 20px;
+}
+
+.splash-reviews-row1, .splash-reviews-row2 {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
 }
