--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,18 @@
 
     <script type="text/javascript">
       // rake assets:precompile  to generate assets
+      window.action1 = "<%= image_url('action1.jpg') %>";
+      window.action2 = "<%= image_url('action2.jpg') %>";
+      window.action3 = "<%= image_url('action3.jpg') %>";
+      window.action4 = "<%= image_url('action4.jpg') %>";
       window.airplane_icon = "<%= image_url('airplane_icon.ico') %>";
       window.airplane_img = "<%= image_url('airplane.png') %>";
       window.airplane_img2 = "<%= image_url('airplane_img2.png') %>";
       window.background_img = "<%= image_url('background_img.png') %>";
-      window.feature1 = "<%= image_url('feature1.jpg') %>";
-      window.feature2 = "<%= image_url('feature2.jpg') %>";
-      window.feature3 = "<%= image_url('feature3.jpg') %>";
-      window.feature4 = "<%= image_url('feature4.jpg') %>";
+      window.black_tiles = "<%= image_url('black_tiles.png') %>";
+      window.diamond_icon = "<%= image_url('diamond_icon.png') %>";
+      window.envelope_icon = "<%= image_url('envelope_icon.png') %>";
+      window.green_tiles = "<%= image_url('green_tiles.png') %>";
       window.heart_icon = "<%= image_url('heart_icon.png') %>";
       window.house_icon = "<%= image_url('house_icon.png') %>";
       window.house_img = "<%= image_url('house.png') %>";
@@ -37,6 +41,7 @@
       window.logo_signup = "<%= image_url('logo_signup.svg') %>";
       window.logo_wide = "<%= image_url('logo_wide.png') %>";
       window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
+      window.red_tiles = "<%= image_url('red_tiles.png') %>";
       window.star_icon = "<%= image_url('star_icon.png') %>";
       window.welcome_robot = "<%= image_url('welcome_robot.png') %>";
     </script>
