user auth done + homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%# boostrap_user %>
     <% if current_user %>
       <script type="text/javascript">
-        window.currentUser = {
+        window.currentuser = {
           "id": <%= current_user.id %>,
           "username": "<%= current_user.username %>",
           "email": "<%= current_user.email %>"
