--- a/app/assets/stylesheets/components/homepage/homepage_navbar.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_navbar.scss
@@ -1,39 +1,55 @@
 @import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
-
-.homepage-nav-elements {
-  display: flex;
-  flex-direction: row;
-  margin-left: 100px;
-  margin-right: 100px;
+.homepage-nav {
+  background-color: rgb(59, 213, 172);
 }
 
+.homepage-nav-elements {
+  // margin-left: 100px;
+  // margin-right: 100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+}
+
+.left-homepage-nav {
+  display: flex;
+  flex-direction: row;
+}
 
 .homepage-nav-logo {
-  width:40px; 
+  width:30px; 
   margin-right: 3px;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .homepage-word-logo {
-  font-size: 20px;
+  color: rgba(245, 245, 245, 0.996);
+  font-family: 'IBM Plex Serif';
+  font-size: 21px;
   font-weight: bolder;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-left: 8px;
 }
 
 .right-homepage-nav {
   position: relative;
-  margin-left: auto;
+  margin-right: auto;
 }
 
 
 .homepage-logout-button {
   background-color: transparent;
   border: none;
-  color: rgb(9, 181, 135);
-  font-size: 14px;
-  font-weight: 400;
+  color: rgba(245, 245, 245, 0.996);
+  font-family: 'IBM Plex Serif';
+  font-size: 18px;
+  font-weight: bold;
   height: 35px;
-  margin-top: 10px;
+  margin-top: 15px;
   width: 95px;
 
+}
+
+.homepage-logout-button:hover {
+  cursor: pointer;
 }
