--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,22 +22,31 @@
 
     <script type="text/javascript">
       // rake assets:precompile  to generate assets
+      window.account_icon = "<%= image_url('account_icon.png') %>";
       window.action1 = "<%= image_url('action1.jpg') %>";
+      window.action1_screen = "<%= image_url('action1_screen.png') %>";
       window.action2 = "<%= image_url('action2.jpg') %>";
+      window.action2_screen = "<%= image_url('action2_screen.png') %>";
       window.action3 = "<%= image_url('action3.jpg') %>";
+      window.action3_screen = "<%= image_url('action3_screen.png') %>";
       window.action4 = "<%= image_url('action4.jpg') %>";
+      window.action4_screen = "<%= image_url('action4_screen.png') %>";
       window.airplane_icon = "<%= image_url('airplane_icon.ico') %>";
       window.airplane_img = "<%= image_url('airplane.png') %>";
       window.airplane_img2 = "<%= image_url('airplane_img2.png') %>";
+      window.all_expenses_icon = "<%= image_url('all_expenses_icon.png') %>";
       window.background_img = "<%= image_url('background_img.png') %>";
       window.black_tiles = "<%= image_url('black_tiles.png') %>";
       window.diamond_icon = "<%= image_url('diamond_icon.png') %>";
+      window.dropdown_arrow = "<%= image_url('dropdown_arrow.png') %>";
+      window.doge = "<%= image_url('doge.png') %>";
       window.envelope_icon = "<%= image_url('envelope_icon.png') %>";
       window.green_tiles = "<%= image_url('green_tiles.png') %>";
       window.heart_icon = "<%= image_url('heart_icon.png') %>";
       window.house_icon = "<%= image_url('house_icon.png') %>";
       window.house_img = "<%= image_url('house.png') %>";
       window.logo_primary = "<%= image_url('logo_primary.png') %>";
+      window.logo_primary_gray = "<%= image_url('logo_primary_gray.png') %>";
       window.logo_signup = "<%= image_url('logo_signup.svg') %>";
       window.logo_wide = "<%= image_url('logo_wide.png') %>";
       window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
