--- a/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
@@ -1,1 +1,15 @@
 @import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
+
+.dashboard-link, .all-expenses-link{
+    display: flex;
+    flex-direction: row;
+}
+
+.left-sidebar img {
+    margin: 7px;
+    width: 25px;
+}
+
+.sidebar-actions p{
+    margin-top: 13px;
+}
