--- a/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
@@ -9,3 +9,17 @@
 .user-icon {
     width: 40px;
 }
+
+.center-nav-right{
+    margin-left: auto;
+}
+
+.add-expense-button{
+    background-color:rgb(255, 98, 0);
+    border-radius: 8%;
+    padding: 8px;
+}
+
+.expense-form-text{
+    color: whitesmoke;
+}
