--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
       window.airplane_img2 = "<%= image_url('airplane_img2.png') %>";
       window.all_expenses_icon = "<%= image_url('all_expenses_icon.png') %>";
       window.background_img = "<%= image_url('background_img.png') %>";
+      window.bill_icon = "<%= image_url('bill_icon.png') %>";
       window.black_tiles = "<%= image_url('black_tiles.png') %>";
       window.diamond_icon = "<%= image_url('diamond_icon.png') %>";
       window.dropdown_arrow = "<%= image_url('dropdown_arrow.png') %>";
