--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -57,7 +57,7 @@
   justify-content: center;
   // border: 1px solid blue;
   margin-top: 40px;
-  background: url(background_img.png);
+  background: url(black_tiles.png);
 }
 
 // .session-left {
