--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,10 +42,13 @@
       window.dropdown_arrow = "<%= image_url('dropdown_arrow.png') %>";
       window.doge = "<%= image_url('doge.png') %>";
       window.envelope_icon = "<%= image_url('envelope_icon.png') %>";
+      window.footer_background = "<%= image_url('footer_background.png') %>";
+      window.github_icon = "<%= image_url('github.svg')%>";
       window.green_tiles = "<%= image_url('green_tiles.png') %>";
       window.heart_icon = "<%= image_url('heart_icon.png') %>";
       window.house_icon = "<%= image_url('house_icon.png') %>";
       window.house_img = "<%= image_url('house.png') %>";
+      window.linkedin_icon = "<%= image_url('linkedin.svg')%>";
       window.logo_primary = "<%= image_url('logo_primary.png') %>";
       window.logo_primary_gray = "<%= image_url('logo_primary_gray.png') %>";
       window.logo_signup = "<%= image_url('logo_signup.svg') %>";
