friends mvp start

--- a/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
@@ -31,6 +31,13 @@
     background-color:rgb(255, 98, 0);
     border-radius: 8%;
     padding: 8px;
+    margin-right: 4px;
+}
+
+.settle-up-button {
+    background-color: rgb(59, 213, 172);
+    border-radius: 8%;
+    padding: 8px;
     margin-right: 12px;
 }
 
