--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,9 @@
       window.logo_wide = "<%= image_url('logo_wide.png') %>";
       window.logo_with_text = "<%= image_url('logo_with_text.png') %>";
       window.red_tiles = "<%= image_url('red_tiles.png') %>";
+      window.settled_up_icon = "<%= image_url('settled_up_icon.png') %>";
       window.star_icon = "<%= image_url('star_icon.png') %>";
+      window.user_icon = "<%= image_url('user_icon.png') %>";
       window.welcome_robot = "<%= image_url('welcome_robot.png') %>";
     </script>
   </head>
