--- a/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
@@ -22,7 +22,20 @@
     width: 25px;
 }
 
+.dashboard-text {
+    color: rgb(59, 213, 172);
+    font-size: 17px;
+    font-weight: bold;
+}
 
+.expense-text {
+    color: #8c8b8b;
+    font-size: 16px;
+}
+
+.add-friend{
+    margin-top: 7px;
+}
 
 .friend-list {
     background-color: #f6f6f6;
@@ -34,9 +47,21 @@
     background-color: #e6e4e4;
 }
 
+.friends-text {
+    font-size: 13px;
+}
+
+.invisible-space {
+    visibility: hidden;
+}
+
 .add-button {
     display: inline-flex;
     margin-left: auto;
+}
+
+.add-button:hover{
+    cursor: pointer;
 }
 
 .add-button-plus {
@@ -48,3 +73,4 @@
     font-size: 15px;
     margin: 3px;
 }
+
