logout error cleared

--- a/app/assets/stylesheets/components/homepage/dropdown.scss
+++ b/app/assets/stylesheets/components/homepage/dropdown.scss
@@ -5,10 +5,10 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  background-color: rgb(59, 213, 172);
+  background-color: #48be9d;
 }
 .dd-button:hover {
-  background-color:#48be9e;
+  background-color:#268a70;
   cursor: pointer; 
 }
 
