--- a/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
@@ -35,7 +35,7 @@
 }
 
 .settle-up-button {
-    background-color: rgb(59, 213, 172);
+    background-color: #48be9d;
     border-radius: 8%;
     padding: 8px;
     margin-right: 12px;
