--- a/app/assets/stylesheets/components/signup_form.scss
+++ b/app/assets/stylesheets/components/signup_form.scss
@@ -116,6 +116,12 @@ span.visible-input {
   //  padding: 8px 12px;
    
  }
+
+ .signup-submit:hover{
+   cursor: pointer;
+   background-color: #f84808;
+ }
+
 .signup-agreement {
   font-size: 12px;
 }
