--- a/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
@@ -23,7 +23,7 @@
 }
 
 .dashboard-text {
-    color: rgb(59, 213, 172);
+    color: #48be9d;
     font-size: 17px;
     font-weight: bold;
 }
@@ -77,20 +77,32 @@
 
 
 // --------------------------
+// friend_list.jsx
+.friend-list-title {
+    margin-top: 12px;
+    margin-bottom: 5px;
+    background-color: #f6f6f6;
+    color: #ccc;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 4px;
+}
 
 .friends-list-wrd {
   text-transform: uppercase;
-  font-family: Lato;
   font-weight: 500;
   font-size: 11.5px;
-  color: rgb(240, 235, 235);
+  color: rgb(154, 150, 150);
   background-color: rgb(240, 235, 235);
   padding-left: 4px;
 }
 
-.friends-list-text {
-  text-decoration: none;
+.friend-names {
+    color:rgb(111, 108, 108)
 }
+
+// -----
 .friend-link {
   text-decoration: none;
   color: rgb(240, 235, 235);
@@ -112,7 +124,6 @@
 .friend-list-box {
   display: flex;
   align-items: baseline;
-  font-family: Lato;
   font-weight: 500;
   font-size:14.5px;
   color: rgb(240, 235, 235);
@@ -131,8 +142,7 @@
 
 .add-friend-wrd {
   color: white; 
-  background-color: rgb(157, 234, 157);
-  font-family: Lato;
+  background-color: #5bc5a7;
   font-size: 16px;
   padding-top:4px;
   padding-bottom:4px;
@@ -140,7 +150,6 @@
   // margin-left: 5px;
 }
 .users-index-box {
-  font-family: Lato;
   font-weight: 500;
   font-size:14.5px;
   color: rgb(240, 235, 235);
@@ -152,10 +161,9 @@
 }
 
 .add-friend-submit {
-  font-family: Lato;
   font-size: 12px;
   margin-left: 5px;
-  color: rgb(240, 235, 235);
+  color: rgb(159, 155, 155);
   background-color:  rgb(240, 235, 235);
   border: 1px solid rgb(240, 235, 235);
   padding: 3.5px; 
