--- a/app/assets/stylesheets/components/homepage/homepage_navbar.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_navbar.scss
@@ -1,6 +1,6 @@
 @import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
 .homepage-nav {
-  background-color: rgb(59, 213, 172);
+  background-color: #48be9d;
 }
 
 .homepage-nav-elements {
@@ -55,7 +55,7 @@
   width: 30px;
   margin-top: 10px;
   border-radius: 50%;
-  background-color: rgb(59, 213, 172);
+  background-color: #48be9d;
 }
 
 .homepage-username {
