--- a/app/assets/stylesheets/components/splash_page.scss
+++ b/app/assets/stylesheets/components/splash_page.scss
@@ -252,28 +252,28 @@ font-weight: bold;
   height: 22px;
 }
 
-.splash-reviews{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+// .splash-reviews{
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
   
-}
-.splash-reviews div {
-  margin: 10px;
-  font-size: 20px;
-}
+// }
+// .splash-reviews div {
+//   margin: 10px;
+//   font-size: 20px;
+// }
 
-.splash-reviews-row1, .splash-reviews-row2 {
-  display: flex;
-  flex-direction: row;
-  margin: 10px;
-}
+// .splash-reviews-row1, .splash-reviews-row2 {
+//   display: flex;
+//   flex-direction: row;
+//   margin: 10px;
+// }
 
 .splash-footer {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-bottom: 45px;
+  margin-bottom: 60px;
 }
 
 .splash-footer div {
