--- a/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
@@ -27,7 +27,7 @@
     font-weight: bold;
 }
 
-.add-expense-button{
+.add-bill-button{
     background-color:rgb(255, 98, 0);
     border-radius: 8%;
     padding: 8px;
@@ -41,7 +41,7 @@
     margin-right: 12px;
 }
 
-.expense-form-text{
+.bill-form-text{
     color: whitesmoke;
     font-family: 'IBM Plex Serif';
     font-size: 15px;
