--- a/app/assets/stylesheets/components/homepage/dropdown.scss
+++ b/app/assets/stylesheets/components/homepage/dropdown.scss
@@ -1,3 +1,5 @@
+@import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
+
 .dd-button {
   border: none;
   display: flex;
