--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
       window.background_img = "<%= image_url('background_img.png') %>";
       window.bill_icon = "<%= image_url('bill_icon.png') %>";
       window.black_tiles = "<%= image_url('black_tiles.png') %>";
+      window.category_choose_icon = "<%= image_url('category_choose_icon.png') %>";
       window.diamond_icon = "<%= image_url('diamond_icon.png') %>";
       window.dropdown_arrow = "<%= image_url('dropdown_arrow.png') %>";
       window.doge = "<%= image_url('doge.png') %>";
