--- a/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
@@ -34,11 +34,22 @@
     margin-right: 4px;
 }
 
+
+.add-bill-button:hover {
+    cursor: pointer;
+    background-color: rgb(255, 68, 0);
+}
+
 .settle-up-button {
     background-color: #48be9d;
     border-radius: 8%;
     padding: 8px;
     margin-right: 12px;
+}
+
+.settle-up-button:hover {
+    cursor: pointer;
+    background-color: #45d8af;
 }
 
 .bill-form-text{
