--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -22,7 +22,7 @@
   flex-direction: column;
 }
 
-.addex-head {
+.add-bill-header {
   background-color: rgb(136, 230, 136);
   color: rgb(215, 211, 211);
   font-family: Lato;
@@ -36,7 +36,7 @@
   
 }
 
-.addex-friends {
+.add-bill-friends {
   display:flex;
   border-bottom: 1px solid rgb(200, 196, 196);
   position: relative;
@@ -57,8 +57,6 @@
   border: 0.5px solid rgb(215, 211, 211);
   margin-left: 3px;
   width: 120px;
-  // position: absolute;
-  // top: 50px;
   margin-right: 12px;
 }
 
@@ -70,7 +68,6 @@
   background-color: rgb(246, 242, 242);
   color: rgb(120, 119, 119);
   position: absolute;
-  // top: 50px;
   z-index: 9;
   height: 50px;
   font-family: Lato;
@@ -78,11 +75,9 @@
 
 .ae-friend {
   cursor: pointer;
-  // border: 1px solid blue;
 }
 
-.addex-details-1 {
-  // border: 1px solid blue;
+.add-bill-details-1 {
   display:flex;
   flex-direction: row;
   font-family: Lato;
@@ -91,7 +86,7 @@
   // justify-content: space-between;
 }
 
-.details-1-left {
+.add-bill-details-left {
   display:flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -100,37 +95,31 @@
   
 }
 
-.details-1-left img {
-  padding-left: 45px; 
-  margin-top: 5px
-}
 
-.details-1-right {
-  // border: 1px solid green;
+.add-bills-details-right {
   padding-left: 25px
 }
 
-.categories-selector{
+.category-selector{
   width: 90px;
   margin-left: 17px;
   border: 0.5px solid rgb(200, 196, 196);
 }
 
-.addex-desc, .addex-amt {
+.add-bill-desc, .add-bill-amt {
   margin-top:3px;
   border: 0.5px solid rgb(200, 196, 196);
   height: 23px
 }
 
-.addex-desc-amt {
+.add-bill-desc-amt {
   margin-top: 20px
 }
 
-.addex-details-2 {
+.add-bill-details-2 {
   display: flex;
   align-items: center;
   flex-direction: column;
-  // border: 1px solid blue;
   font-family: Lato;
   font-size: 14px
 }
@@ -149,31 +138,29 @@
  margin-bottom: 10px
 }
 
-.addex-notes {
+.add-bill-notes {
   border: 0.5 solid rgb(200, 196, 196);
 }
 
-.addex-buttons {
+.add-bill-buttons {
   border-top: 0.5px solid rgb(200, 196, 196);
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  // align-items: flex-start
   padding-top: 20px;
   margin-top: 10px
 }
 
-.ae-btn-save {
+.add-bill-save {
   background-color: rgb(136, 230, 136);
   color: rgb(235, 229, 229);
   margin-left: 3px;
   border: 1px solid rgb(200, 196, 196);
   font-size: 14px;
   height: 30px;
-  // height: 20px;
   margin-right: 5px
 }
-ae-btn-cancel {
+.add-bill-cancel {
   font-size: 14px;
   border: 0.5px solid rgb(200, 196, 196);
 
