--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
       window.bill_icon = "<%= image_url('bill_icon.png') %>";
       window.black_tiles = "<%= image_url('black_tiles.png') %>";
       window.category_choose_icon = "<%= image_url('category_choose_icon.png') %>";
+      window.delete_icon = "<%= image_url('delete_icon.png') %>";
       window.diamond_icon = "<%= image_url('diamond_icon.png') %>";
       window.dropdown_arrow = "<%= image_url('dropdown_arrow.png') %>";
       window.doge = "<%= image_url('doge.png') %>";
