--- a/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_leftsidebar.scss
@@ -17,7 +17,7 @@
     text-align: left;
 }
 
-.left-sidebar img {
+.dashboard img, .all-expenses img {
     margin: 7px;
     width: 25px;
 }
@@ -104,7 +104,19 @@
   color:rgb(111, 108, 108);
 }
 
+.friend-delete-button{
+  background-color: transparent;
+  border: none;
+}
 
+.friend-delete-button:hover {
+  cursor: pointer;
+}
+
+#delete-icon {
+  margin-left: 10px;
+  width: 13px;
+}
 
 
 .friend-link {
