add-bill-form styling & friendlist

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,16 @@
 .session-submit {
    text-transform: capitalize;
  }
+
+
+ #font-bold {
+  font-weight: 600;
+}
+
+#font-regular {
+  font-weight: 300;
+}
+
+.font-bold-2 {
+  font-weight: bold;
+}
