--- a/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_centercolumn.scss
@@ -54,7 +54,7 @@
 
 .bill-form-text{
     color: whitesmoke;
-    font-family: 'IBM Plex Serif';
+    font-family: 'Helvetica Neue';
     font-size: 15px;
     font-weight: bold;
 }
