--- a/app/assets/stylesheets/components/homepage/homepage_noexpense.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_noexpense.scss
@@ -1,4 +1,4 @@
-@import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
+@import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='Helvetica Neue'&display=swap");
 
 .noexpense-container {
     display: flex;
@@ -24,7 +24,7 @@
 }
 
 .noexpense-content-bold {
-    font-family: 'IBM Plex Serif';
+    font-family: 'Helvetica Neue';
     font-size: 30px;
     font-weight: bolder;
     text-align: left;
@@ -35,7 +35,7 @@
 
 .noexpense-content-light {
     color: rgb(98, 95, 95);
-    font-family: 'IBM Plex Serif';
+    font-family: 'Helvetica Neue';
     font-size: 21px;
     text-align: left;
     display: block;
