--- a/app/assets/stylesheets/components/homepage/homepage_navbar.scss
+++ b/app/assets/stylesheets/components/homepage/homepage_navbar.scss
@@ -1,4 +1,4 @@
-@import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
+@import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='Helvetica Neue'&display=swap");
 .homepage-nav {
   background-color: #48be9d;
 }
@@ -30,7 +30,7 @@
   color: rgba(245, 245, 245, 0.996);
   display: flex;
   flex-direction: row;
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   font-size: 21px;
   font-weight: bolder;
   margin-bottom: 5px;
@@ -62,7 +62,7 @@
   background-color: transparent;
   border: none;
   color: rgba(245, 245, 245, 0.996);
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   font-size: 17px;
   font-weight: bold;
   // height: 35px;
