--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,4 +1,4 @@
-@import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='IBM Plex Serif'&display=swap");
+@import url( href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family='Helvetica Neue'&display=swap");
 
 // navbar
 
@@ -41,7 +41,7 @@
   background-color:  rgb(9, 181, 135);
   border-radius: 5px;
   color: white;
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   font-size: 14px;
   font-weight: 400;
   height: 35px;
@@ -89,7 +89,7 @@
 
 .session-welcome {
   text-transform: uppercase;
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   font-size: 16px;
   color: #999999;
   font-weight: 550;
@@ -97,7 +97,7 @@
 
 .session-form span {
   color: #333333;
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   font-size: 18px;
 }
 
@@ -108,7 +108,7 @@
   width: 270px;
   height: 30px;
   color: #333333;
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   font-size: 18px;
 }
 
@@ -121,7 +121,7 @@
    height: 45px;
    width: 98px;
    background-color:  rgb(7, 149, 7);
-   font-family: 'IBM Plex Serif';
+   font-family: 'Helvetica Neue';
    font-weight: 400;
    font-size: 15px;
    color: white;
@@ -144,7 +144,7 @@
    height: 35px;
    width: 98px;
    background-color:  #393c3f;
-   font-family: 'IBM Plex Serif';
+   font-family: 'Helvetica Neue';
    font-weight: 400;
    font-size: 15px;
    color: white;
@@ -168,7 +168,7 @@
   color: #ffffff;
   padding: 5px;
   font-size: 14px;
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   width: 941px;
   display: flex;
   margin: auto;
