--- a/app/assets/stylesheets/components/splash_page.scss
+++ b/app/assets/stylesheets/components/splash_page.scss
@@ -44,7 +44,7 @@
   background-color:  rgb(9, 181, 135);
   border-radius: 5px;
   color: white;
-  font-family: 'IBM Plex Serif';
+  font-family: 'Helvetica Neue';
   font-size: 14px;
   font-weight: 400;
   height: 35px;
