--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -13,156 +13,11 @@
   top: 43%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(246, 241, 241);
+  background-color:#fff;
   width:360px;
-  height: 420px;
+  height: 400px;
   border-radius: 5px;
   border: 2px solid rgb(200, 196, 196);
   display:flex;
   flex-direction: column;
-}
-
-.add-bill-header {
-  background-color: rgb(136, 230, 136);
-  color: rgb(215, 211, 211);
-  font-family: Lato;
-  font-size: 17px;
-  font-weight: 550;
-  display: flex;
-  justify-content: space-between;
-  height: 40px;
-  align-items: center;
-  padding: 6px;
-  
-}
-
-.add-bill-friends {
-  display:flex;
-  border-bottom: 1px solid rgb(200, 196, 196);
-  position: relative;
-  height: 45px;
-  font-family: Lato;
-  margin-top: 10px;
-  font-size: 14px;
-  margin-left: 4px;
-  padding-top: 5px
-}
-
-.category-icon-medium {
-  width: 64px;
-}
-
-.ae-friend-search {
-  background-color: rgb(200, 196, 196);
-  border: 0.5px solid rgb(215, 211, 211);
-  margin-left: 3px;
-  width: 120px;
-  margin-right: 12px;
-}
-
-.dont-show-friends-list {
-  visibility: hidden;
-}
-
-.show-friends-list {
-  background-color: rgb(246, 242, 242);
-  color: rgb(120, 119, 119);
-  position: absolute;
-  z-index: 9;
-  height: 50px;
-  font-family: Lato;
-}
-
-.ae-friend {
-  cursor: pointer;
-}
-
-.add-bill-details-1 {
-  display:flex;
-  flex-direction: row;
-  font-family: Lato;
-  font-size: 14px;
-  margin-bottom: 20px;
-  // justify-content: space-between;
-}
-
-.add-bill-details-left {
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  // border: 1px solid red;
-  padding-left: 10px;
-  
-}
-
-
-.add-bills-details-right {
-  padding-left: 25px
-}
-
-.category-selector{
-  width: 90px;
-  margin-left: 17px;
-  border: 0.5px solid rgb(200, 196, 196);
-}
-
-.add-bill-desc, .add-bill-amt {
-  margin-top:3px;
-  border: 0.5px solid rgb(200, 196, 196);
-  height: 23px
-}
-
-.add-bill-desc-amt {
-  margin-top: 20px
-}
-
-.add-bill-details-2 {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  font-family: Lato;
-  font-size: 14px
-}
-
-.details-2-top {
-  display: flex;
-}
-
-.paidby-selector {
-  margin-left: 3px;
-  margin-right: 3px;
-}
-
-.details-2-middle {
- margin-top: 5px; 
- margin-bottom: 10px
-}
-
-.add-bill-notes {
-  border: 0.5 solid rgb(200, 196, 196);
-}
-
-.add-bill-buttons {
-  border-top: 0.5px solid rgb(200, 196, 196);
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  padding-top: 20px;
-  margin-top: 10px
-}
-
-.add-bill-save {
-  background-color: rgb(136, 230, 136);
-  color: rgb(235, 229, 229);
-  margin-left: 3px;
-  border: 1px solid rgb(200, 196, 196);
-  font-size: 14px;
-  height: 30px;
-  margin-right: 5px
-}
-.add-bill-cancel {
-  font-size: 14px;
-  border: 0.5px solid rgb(200, 196, 196);
-
-
 }
